renamed da* into ds*

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS)
 set(CMAKE_C_STANDARD 11)
 enable_testing()
 
-add_executable(tests tests.c da_tests.c)
+add_executable(tests tests.c ds_tests.c)
 
 add_test(test_create ./tests test_create)
 add_test(test_destroy ./tests test_destroy)
